Fixed header link baseline align

--- a/frontend/app/scss/_user-header.scss
+++ b/frontend/app/scss/_user-header.scss
@@ -16,6 +16,8 @@
     font-size: 16px;
     font-weight: 400;
     margin-left: 8px;
+    display: flex;
+    align-items: center;
 
     a:hover {
       color: $primary-color;
